trying to fix yaml file api incompatibility

--- a/applications/hello-kenzan/k8s/deployment.yaml
+++ b/applications/hello-kenzan/k8s/deployment.yaml
@@ -21,6 +21,9 @@ metadata:
   labels:
     app: hello-kenzan
 spec:
+  selector:
+    matchLabels:
+      app: hello-kenzan
   strategy:
     type: Recreate
   template:
