fixed deployment syntax for puzzle deployment command

--- a/applications/puzzle/k8s/deployment.yaml
+++ b/applications/puzzle/k8s/deployment.yaml
@@ -7,6 +7,10 @@ metadata:
 spec:
   strategy:
     type: Recreate
+  selector:
+    matchLabels:
+      app: puzzle
+      tier: puzzle 
   template:
     metadata:
       labels:
