--- a/applications/puzzle/k8s/deployment.yaml
+++ b/applications/puzzle/k8s/deployment.yaml
@@ -57,6 +57,10 @@ metadata:
 spec:
   strategy:
     type: Recreate
+  selector:
+    matchLabels:
+      app: mongo
+      tier: mongo 
   template:
     metadata:
       labels:
