--- a/applications/jenkins/Dockerfile
+++ b/applications/jenkins/Dockerfile
@@ -18,6 +18,7 @@ echo "deb http://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/so
 apt-get update && apt-get install -y kubectl
 
 # Grant jenkins user group access to /var/run/docker.sock
-RUN addgroup --gid 1001 dsock
-RUN gpasswd -a jenkins dsock 
+#RUN addgroup --gid 1001 dsock
+#RUN gpasswd -a jenkins dsock 
+RUN usermod -a -G docker jenkins
 USER jenkins
