fixed missing secret definition for kenzan image access in registry

--- a/applications/hello-kenzan/k8s/deployment-azure.yaml
+++ b/applications/hello-kenzan/k8s/deployment-azure.yaml
@@ -38,3 +38,5 @@ spec:
         ports:
         - containerPort: 80
           name: hello-kenzan
+      imagePullSecrets:
+        - name: acr-auth2
